--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
+    ext {
+        springBootVersion = '1.4.0.RELEASE'
+    }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
@@ -17,18 +19,78 @@ jar {
     version =  '0.1.0'
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+sourceSets {
+    generated {
+        java {
+            srcDirs = ['src/main/generated']
+        }
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+//configurations {
+//    compile.exclude module: 'spring-boot-starter-logging'    // because we use log4j2
+//}
 
 dependencies {
+    /* SERVER DEPENDENCIES*/
     compile("org.springframework.boot:spring-boot-starter-web")
+//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+//    compile('org.springframework.boot:spring-boot-starter-log4j2')
+    compile('org.springframework.boot:spring-boot-actuator-docs')
+    compile('com.internetitem.spring:spring-boot-cxf-jaxrs:1.1')      // All beans tagged with @Path will be automatically added as JAX-RS Services. All beans tagged with @Provider will be added as JAX-RS Providers.
+
+    compile('org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.6')
+    compile('org.apache.cxf:cxf-rt-rs-client:3.1.6')
+    compile('org.apache.cxf:cxf-rt-frontend-jaxws:3.1.6')
+
+    compile('org.postgresql:postgresql:9.4.1209')
+    compile('org.liquibase:liquibase-core')
+
+    compile('net.sf.ehcache:ehcache:2.10.1')
+
+    compile ('com.mysema.querydsl:querydsl-core:3.7.4')
+    compile ('com.mysema.querydsl:querydsl-jpa:3.7.4')
+    compile ('com.mysema.querydsl:querydsl-apt:3.7.4')
+
+    /* CLIENT DEPENDENCIES */
+    compile('org.webjars:angularjs:1.5.7')
+    compile('org.webjars:bootstrap:3.3.7')
+    compile('org.webjars:jquery:3.0.0')
+//    compile('org.webjars:jquery-ui:1.12.0')
+//    compile('org.webjars:jquery-ui-themes:1.11.4')
+    compile('org.webjars.bower:jquery-placeholder:2.3.1')
+    compile('org.webjars:lodash:4.0.0')
+    compile('org.webjars.bower:ng-file-upload:12.0.4')
+
+    /* TEST DEPENDENCIES */
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.hsqldb:hsqldb:2.3.4')
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
+}
+
+task stage {
+    dependsOn build
+}
+
+//----------------------------------------------------------------------------------------------------------------------
+//  Logic
+//----------------------------------------------------------------------------------------------------------------------
+
+//----------------------------------------------------------------------------------------------------------------------
+//  Tasks
+//----------------------------------------------------------------------------------------------------------------------
+
+clean {
+    delete sourceSets.generated.java.srcDirs
 }
