--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     compile('org.webjars:angularjs:1.5.7')
     compile('org.webjars:bootstrap:3.3.7')
     compile('org.webjars:jquery:3.0.0')
-    compile('org.webjars:jquery-ui:1.12.0')
+//    compile('org.webjars:jquery-ui:1.12.0')
 //    compile('org.webjars:jquery-ui-themes:1.11.4')
     compile('org.webjars.bower:jquery-placeholder:2.3.1')
     compile('org.webjars:lodash:4.0.0')
