--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,14 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.zeroturnaround:gradle-jrebel-plugin:1.1.3")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'rebel'
 
 jar {
     baseName = 'sandbox'
@@ -45,6 +47,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
 //    compile('org.springframework.boot:spring-boot-starter-log4j2')
     compile('org.springframework.boot:spring-boot-actuator-docs')
+    compile("org.springframework.mobile:spring-mobile-device")
     compile('com.internetitem.spring:spring-boot-cxf-jaxrs:1.1')      // All beans tagged with @Path will be automatically added as JAX-RS Services. All beans tagged with @Provider will be added as JAX-RS Providers.
 
     compile('org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.6')
@@ -86,10 +89,19 @@ task stage {
 //----------------------------------------------------------------------------------------------------------------------
 //  Logic
 //----------------------------------------------------------------------------------------------------------------------
+jar.dependsOn(generateRebel)
 
 //----------------------------------------------------------------------------------------------------------------------
 //  Tasks
 //----------------------------------------------------------------------------------------------------------------------
+bootRun {
+    jvmArgs '-javaagent:jrebel.jar',
+            '-Xdebug',
+            '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000'
+//    systemProperties = [
+//            'spring.profiles.active': profile
+//    ]
+}
 
 clean {
     delete sourceSets.generated.java.srcDirs
